@@ -1,7 +1,8 @@
 0.9.82
 ======
 
- -
+ - Manage group settings
+ - See who the group hosts are
 
 0.9.81
 ======
